[workspace]
members = [
  "crates/runtime-core",
  "crates/runtime-mirror",
  "crates/runtime-tx",
  "crates/runtime-schedule",
  "crates/bindings-node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Hiero Runtime Maintainers"]
repository = "https://github.com/hiero-ledger/hiero-runtime"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
wiremock = "0.6"
async-trait = "0.1"
napi = { version = "3.8.3", default-features = false, features = ["tokio_rt"] }
napi-derive = "3.2.5"
napi-build = "2.3.1"
hiero-sdk = "0.43.0"
time = { version = "0.3", features = ["std"] }