[package]
name = "hiero-runtime-bindings-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-trait.workspace = true
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
hiero-runtime-core = { path = "../runtime-core" }
hiero-runtime-mirror = { path = "../runtime-mirror" }
hiero-runtime-tx = { path = "../runtime-tx" }
hiero-runtime-schedule = { path = "../runtime-schedule" }

[build-dependencies]
napi-build.workspace = true