[package]
name = "hiero-runtime-mirror"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

hiero-runtime-core = { path = "../runtime-core" }

