[package]
name = "hiero-runtime-schedule"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
hiero-sdk.workspace = true
serde_json.workspace = true
hiero-runtime-core = { path = "../runtime-core" }
hiero-runtime-tx = { path = "../runtime-tx" }

[dev-dependencies]
wiremock.workspace = true
hiero-runtime-mirror = { path = "../runtime-mirror" }