[package]
name = "hiero-runtime-tx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
hiero-sdk.workspace = true
hiero-runtime-core = { path = "../runtime-core" }
hiero-runtime-mirror = { path = "../runtime-mirror" }

[dev-dependencies]
wiremock.workspace = true